syntax = "proto3";

package home.app.grpc;

option java_multiple_files = true;

message RegistrationMessage {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
  Address address = 6;
  enum Role {
    UNKNOWN = 0;
    USER = 1;
    SERVICE_ADMINISTRATOR = 2;
  }
  Role role = 7;
}

message Address {
  string country = 1;
  string city = 2;
  string street = 3;
  uint32 number = 4;
}
