syntax = "proto3";

package home.app.grpc;

option java_multiple_files = true;

message LoginMessage {
  string email = 1;
  string password = 2;
}
